--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
 
 </head>
 <body>
+<!--header-->
 <header>
+    <img src="images/img_2.png" alt="My Profile Picture">
     <h1>My Professional Portfolio</h1>
     <nav>
         <a href="#about">About Me</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact Me</a>
     </nav>
-
+    <button onclick="toggleTheme()"> Toggle Dark Mode</button>
 </header>
-
+<!-- Greeting Section -->
+<section id="greeting">
+    <h2 id="greet-text">Hello!</h2>
+</section>
 <!--about me-->
 <section id="about">
     <h2>About Me</h2>
@@ -52,6 +57,7 @@
     </form>
 </section>
 
+<script src="js/script.js"></script>
 
 </body>
 </html>
