--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>My professional Portfolio</title>
+    <!--link to external css-->
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
-<!--header-->
+<!--header with profile picture, navigation and dark mode-->
 <header>
-    <img src="images/img_2.png" alt="My Profile Picture">
+    <img src="images/img_3.png" alt="My Profile Picture">
     <h1>My Professional Portfolio</h1>
     <nav>
         <a href="#about">About Me</a>
@@ -19,26 +20,28 @@
     </nav>
     <button onclick="toggleTheme()"> Toggle Dark Mode</button>
 </header>
-<!-- Greeting Section -->
+<!-- Greeting message Section updated by the js file  -->
 <section id="greeting">
     <h2 id="greet-text">Hello!</h2>
 </section>
-<!--about me-->
+<!--about me section-->
 <section id="about">
     <h2>About Me</h2>
     <p> Hello! my name is Fajer Alyami, A CS student at KFUPM.
     I am currently in my junior year, I hope I graduate soon inshallah. </p>
     <p> "Motivated undergraduate with problem-solving skills."</p>
 </section>
-<!--projects-->
+<!--projects section-->
 <section id="projects">
     <h2>Projects</h2>
     <div class="projects">
+        <!--project 1-->
     <div class="project-card">
     <img src="images/img_1.png" alt="Project 1">
     <h3>Project 1</h3>
-    <p>This project was about creation a single cycle cpu in the course COE301 which is called computer organization.</p>
+    <p>This project was about creating a single cycle cpu in the course COE301 which is called computer organization.</p>
     </div>
+        <!-- project2 -->
     <div class="project-card">
         <img src="images/img.png" alt="Project 2">
         <h3>Project 2</h3>
@@ -46,7 +49,7 @@
     </div>
     </div>
 </section>
-<!--contact-->
+<!--contact section with form-->
 <section id="contact">
     <h2>Contact Me</h2>
     <form>
@@ -56,7 +59,7 @@
         <button type="submit">Send message</button>
     </form>
 </section>
-
+<!-- link to external js-->
 <script src="js/script.js"></script>
 
 </body>
